--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -14,7 +14,13 @@
     cursor: pointer;
     padding: 5px;
 }
-
+.logout{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    padding: 5px;
+    margin-left: 30px;
+}
 ul{
     flex: 1;
     list-style: none;
