--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -1,40 +1,102 @@
+.container {
+  margin: 0 auto;
+  padding: 20px;
+}
+.account-items {
+  margin-top: 20px;
+  display: flex; 
+  justify-content: space-between; 
+}
+
+.account-items .account-picture {
+  flex: 0 0 auto; 
+  width: 400px; 
+}
+
+.account-items .account-card {
+  flex: 1; 
+  margin-left: 20px; 
+}
 .account-card {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .account-card-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .account-info {
-    margin-bottom: 10px;
-  }
-  
-  .account-info label {
-    font-weight: bold;
-  }
-  
-  .account-info p {
-    margin: 5px 0;
-  }
-  
-  .account-description {
-    margin-bottom: 20px;
-  }
-  
-  .account-description p {
-    margin: 5px 0;
-  }
-  
-  .account-objects {
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
+  margin-left: auto;
+  width: 1000px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.file-upload{
+  margin-bottom: 20px;
+}
+
+.account-picture {
+  border-radius: 10px;
+  margin-right: auto;
+  width: 300px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.account-picture img {
+  max-width: 100%; 
+  max-height: 100%;
+  border-radius: 30px;
+  display: block; 
+  margin: 0 auto; 
+}
+
+.account-card-title {
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.account-info {
+  margin-bottom: 10px;
+}
+
+.account-info label {
+  font-weight: bold;
+}
+
+.account-info p {
+  margin: 0;
+}
+
+.account-info input[type="text"] {
+  width: calc(100% - 40px); /* Subtracting the width of the edit button */
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.account-info span {
+  cursor: pointer;
+  color: blue;
+  margin-left: 10px;
+}
+
+.account-info span:hover {
+  text-decoration: underline;
+}
+
+button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+.theme-dark {
+  background-color: #333;
+  color: #fff;
+}
+
+/* Add more styles as needed */
