--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -99,4 +99,12 @@ button:hover {
   color: #fff;
 }
 
-/* Add more styles as needed */
+.file-upload input[type="file"] {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.file-name {
+  font-size: 14px;
+  color: #666;
+}
