--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -23,3 +23,31 @@
   font-weight: 900;
   font-size: 1rem;
 }
+
+.popup-content {
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+
+.popup-content button {
+  margin-top: 10px; 
+}
+
+.marker-info {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.marker-info img {
+  height: 25px;
+  width: 25px;
+  margin-left: 10px; 
+  cursor: pointer;
+}
+.popup-content button {
+  margin-top: 10px;
+}
