--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -1,53 +1,3 @@
-.map-items {
-    margin-top: 20px;
-    display: flex; 
-    justify-content: space-between; 
-  }
-
-.leaflet-container{
-    height: 600px;
-    width: 80%;
-    justify-content: center;
-    align-items: center;
-}
-
-.cluster-icon{
-  height: 2rem;
-  width: 2rem;
-  border-radius: 50%;
-  background-color: #fff;
-  transform: translate(-25%, -25%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 900;
-  font-size: 1rem;
-}
-
-.popup-content {
-  height: fit-content;
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-}
-
-.popup-content button {
-  margin-top: 10px; 
-}
-
-.marker-info {
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-}
-
-.marker-info img {
-  height: 25px;
-  width: 25px;
-  margin-left: 10px; 
-  cursor: pointer;
-}
-.popup-content button {
-  margin-top: 10px;
+.map-template{
+   
 }
