creared map, home pages

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -29,3 +29,53 @@
     justify-content: center;
     align-items: center;
 }
+
+.button-contianer {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+.img-container {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    border: 5px solid #ffffff;
+    border-radius: 10px;
+  }
+
+  .nav-items {
+    background-color: rgb(46, 43, 197);
+    overflow: auto;
+    white-space: nowrap;
+  }
+  
+  
+  .nav-items a {
+    border-right: 2px solid grey;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+  }
+  
+  .nav-items a:hover {
+    background-color: #777;
+  }
+  
+  .menu-container {
+    display: flex;
+    flex-direction: row;
+  }
+  button {
+    color: blue;
+    border: none;
+    background-color: white;
+    text-align: center;
+    padding: 14px;
+    /* text-decoration: none; */
+    cursor: pointer;
+  }
+  button:hover{
+    background-color: whitesmoke;
+  }
